1.0.0 (trunk):
* Changes marked with ! are type changes (not including field additions)
* ! API.{get,post,delete,patch,put} now take optional fail_handlers
* ! Token.{create,get_all,get,delete} now return _ auth_continuation Monad.t
* ! repo type has been renamed repository
* ! repos type has been renamed repositories
* ! repository_forks field renamed to repository_forks_count.
* ! repository_watchers field renamed to repository_stargazers_count.
* ! repository_open_issues field renamed to repository_open_issues_count.
* ! User.repos is now User.repositories
* ! Team.repos is now Team.repositories
* ! repository_description is now optional
* ! release_name is now optional
* ! release_body is now optional
* ! new_release_name is now optional
* ! new_release_body is now optional
* ! branch_user is now optional
* ! user_info_ty field removed in favor of specific user and organization types
* ! user_type type has been removed
* ! team_info_permission is now a variant type instead of a string
* ! team_info_organization is now an org rather than a user
* ! event_org field is now an org option rather than a user
* ! web_hook_config_insecure_ssl is now a bool rather than a string
* ! hook_config is now a hook_config rather than a web_hook_config
* ! new_hook_config is now a hook_config rather than a web_hook_config
* ! update_hook_config is now a hook_config rather than a web_hook_config
* Atdgen >=1.5.0 and Yojson >=1.2.0 are now required for tag_field support
* Add Stream module and API.get_stream function for paginated responses (#46)
* git-jar now supports 2FA (#38)
* Github.{auth_continuation,handler} type added
* Event submodule added with a variety of event sources
* A new jar command, git-list-events, has been added to print events for a repo
* A new test binary, parse_events, has been added which downloads and
  parses archive event data
* Fixed bug in Issue.for_repo preventing listing of issues without
  milestone (#49,#53 Michael Grünewald)